refactor: Migrate to JSpecify annotations for nullability constraints. (#3016)
Replaces all deprecated Spring annotations with JSpecify annotations, and includes a full refactor so that the parent build profile `-Pnullaway` compiles and works proper.

Closes #2987

Signed-off-by: Michael Simons <michael@simons.ac>